@@ -97,4 +97,4 @@ the [accepted result](http://hexpi.sourceforge.net/).
 
 All files are released under
 the [Python PSF License](https://docs.python.org/3/license.html)
-and are Copyright 2006-2018 RW Penney.
+and are Copyright 2006-2019 RW Penney.
